fix: subtotal centering on small breakpoint

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -304,7 +304,6 @@
     text-align: center
 
   .total
-    width: 80%
     padding: 0 10%
 
   .cart-items,
